gdb/ 	PR 14548 	* infrun.c (handle_inferior_event): Do not reverse-continue back to the 	function start if we are already at function start.  Both for 	reverse-next and for reverse-step into function without line number 	info.

gdb/testsuite/
	PR 14548
	* gdb.reverse/singlejmp-reverse-nodebug.S: New file.
	* gdb.reverse/singlejmp-reverse-nodebug.c: New file.
	* gdb.reverse/singlejmp-reverse.S: New file.
	* gdb.reverse/singlejmp-reverse.c: New file.
	* gdb.reverse/singlejmp-reverse.exp: New file.